Fixing the contrast issues nad also cutoff of image on passthrough page on small screens.

--- a/dev/scss/_customize-table.scss
+++ b/dev/scss/_customize-table.scss
@@ -8,8 +8,8 @@
 	max-width: 1000px;
 	margin: 0 auto 10px;
 	padding: 10px;
-	background: linear-gradient(to bottom, $design-pop-gradient-top, $design-pop-gradient-bottom);
-	color: $design-white-color;
+	background: $gray-lighter;
+    color: $design-black-color;
 
 	@include bp(screen1) {
 		flex-flow: row nowrap;
@@ -25,6 +25,7 @@
 	font-size: 1.4em;
 	font-weight: bold;
 	vertical-align: baseline;
+    color: $design-black-color;
 
 	@include bp(screen1) {
 		margin: 0;
