--- a/dev/scss/_pre.scss
+++ b/dev/scss/_pre.scss
@@ -24,6 +24,8 @@
 	@extend %pre__base;
 
 	code {
+        background: $design-light-gray-bg-color;
+        color: $design-black-color;
 		white-space: pre-wrap;
 	}
 }
